--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -10,7 +10,9 @@
     height: 100vh;
     width: 100%;
     background-image: url(../images/homepage/home.png);
+    position: relative;
     background-size: 100%;
+    overflow: auto;
 }
 
 ul{
@@ -96,6 +98,7 @@ li{
 .btns{
     display: flex;
     padding-left: 5px;
+    margin-bottom: 50px;
 }
 
 .loginbtn{
